--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "vanilla-app-template",
+  "name": "miod-malina",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build --base=/vanilla-app-template/",
+    "build": "vite build --base=/miod-malina/",
     "preview": "vite preview"
   },
   "devDependencies": {
